Fix text-align on headline desktop version

--- a/src/styles/headline.css
+++ b/src/styles/headline.css
@@ -21,7 +21,7 @@
   justify-content: flex-start;
   gap: 15px;
   flex-wrap: wrap;
-  text-align: flex-start;
+  text-align: start;
 }
 
 .headlines-information__h1 {
